added in other items

--- a/docs/items/others/others.mdx
+++ b/docs/items/others/others.mdx
@@ -3,20 +3,11 @@ sidebar_position: 13
 title: Others
 ---
 
-<ItemImage file="advanced_circuit" alt="Parts" size="200" />
+<ItemImage file="uu-matter" alt="Others" size="200" />
 
-```
-    *{{:mods:techreborn:scrap.png?32|}}**[[items:scrap|Scrap]]**
-    *{{:mods:techreborn:scrap_box.png?32|}}**[[items:scrap_box|Scrap Boxes]]**
-    *{{:mods:techreborn:uu-matter.png?32|}}**[[items:uu-matter|UU-Matter]]**
-     FREQUENCY_TRANSMITTER;
-	 GPS;
-	 MANUAL;
-	 CELL;
-     		PLANTBALL,
-		COMPRESSED_PLANTBALL,
-		SPONGE_PIECE,
-		TEMPLATE_TEMPLATE,
+A collection of items that don't really fit anywhere else.
 
-		SYNTHETIC_REDSTONE_CRYSTAL;
-```
+- <McItem slug="synthetic_redstone_crystal" pack="techreborn"/> 
+- <McItem slug="scrap" pack="techreborn"/> 
+- <McItem slug="scrap_box" pack="techreborn"/> 
+- <McItem slug="uu-matter" pack="techreborn" overrides={{name:"UU-Matter"}}/> 
