dead link fixing

--- a/docs/items/others/synthetic_redstone_crystal.mdx
+++ b/docs/items/others/synthetic_redstone_crystal.mdx
@@ -7,7 +7,7 @@ title: Synthetic Redstone Crystal
 # Synthetic Redstone Crystal
 
 The **Synthetic Redstone Crystal** is an ingredient created by fusing <McItem slug="minecraft:redstone" /> with a <McItem slug="minecraft:diamond" />.  
-It is the first step in making advanced energy storage. See [Portable Batteries](/energy/batteries#portable_batteries) for some next steps.
+It is the first step in making advanced energy storage. See [Portable Batteries](/docs/items/batteries) for some next steps.
 
 ## Recipe
 
