specific item fixes
all of these are fixes to use the correct minecraft name (disambiguation was making the a links work before)

--- a/docs/blocks/batteries/battery_box.mdx
+++ b/docs/blocks/batteries/battery_box.mdx
@@ -14,4 +14,4 @@ The **Battery Box** is a battery block that stores energy and charges items..
 
 ## Recipe
 
-<CraftingTable recipe="input minecraft:wood_planks techreborn:insulated_copper_cable minecraft:wood_planks input techreborn:red_cell_battery techreborn:red_cell_battery techreborn:red_cell_battery input minecraft:wood_planks minecraft:wood_planks minecraft:wood_planks output techreborn:battery_box"/>
+<CraftingTable recipe="input minecraft:oak_planks techreborn:insulated_copper_cable minecraft:oak_planks input techreborn:red_cell_battery techreborn:red_cell_battery techreborn:red_cell_battery input minecraft:oak_planks minecraft:oak_planks minecraft:oak_planks output techreborn:battery_box"/>
