--- a/docs/blocks/generators/water_mill.mdx
+++ b/docs/blocks/generators/water_mill.mdx
@@ -17,7 +17,7 @@ The **Water Mill** is a **[passive generator](/docs/blocks/generators/passive_ge
 
 ### Recipe
 
-<CraftingTable recipe="input minecraft:stick minecraft:wood_planks minecraft:stick input minecraft:wood_planks techreborn:generator minecraft:wood_planks input minecraft:stick minecraft:wood_planks minecraft:stick output techreborn:water_mill"/>
+<CraftingTable recipe="input minecraft:stick minecraft:oak_planks minecraft:stick input minecraft:oak_planks techreborn:generator minecraft:oak_planks input minecraft:stick minecraft:oak_planks minecraft:stick output techreborn:water_mill"/>
 
 ## Usage
 
