--- a/docs/blocks/item_storage/crude_storage_unit.mdx
+++ b/docs/blocks/item_storage/crude_storage_unit.mdx
@@ -10,7 +10,7 @@ The **Crude Storage Unit** is a very basic storage unit with capacity to store 2
 
 ## Recipe
 
-<CraftingTable recipe="input minecraft:wood_planks minecraft:wood_planks minecraft:wood_planks input minecraft:wood_planks minecraft:barrel minecraft:wood_planks input minecraft:wood_planks minecraft:paper minecraft:wood_planks output techreborn:crude_storage_unit"/>
+<CraftingTable recipe="input minecraft:oak_planks minecraft:oak_planks minecraft:oak_planks input minecraft:oak_planks minecraft:barrel minecraft:oak_planks input minecraft:oak_planks minecraft:paper minecraft:oak_planks output techreborn:crude_storage_unit"/>
 
 ## Usage
 
