--- a/docs/blocks/machines/chemical_reactor.mdx
+++ b/docs/blocks/machines/chemical_reactor.mdx
@@ -16,7 +16,7 @@ The **Chemical Reactor** is used to combine two <McItem slug="techreborn:lava_ce
 | ----------------------------------------------------------------------------------------------------- | ----------- | -------------------------------------------------------- |
 | <McItem slug="techreborn:carbon_cell" /> + <McItem slug="techreborn:calcium_cell" />                  | 40 Seconds  | 2x <McItem slug="techreborn:calcium_carbonate_cell" />   |
 | 8x <McItem slug="minecraft:block_of_gold" /> + <McItem slug="minecraft:apple" />                      | 20 Seconds  | <McItem slug="minecraft:enchanted_golden_apple" />       |
-| <McItem slug="minecraft:blaze_powder" /> + <McItem slug="minecraft:ender_pearl" />                    | 20 Seconds  | 2x <McItem slug="minecraft:ender_eye" />                 |
+| <McItem slug="minecraft:blaze_powder" /> + <McItem slug="minecraft:ender_pearl" />                    | 20 Seconds  | 2x <McItem slug="minecraft:eye_of_ender" />                 |
 | 8x <McItem slug="minecraft:gold_nugget"  /> + <McItem slug="minecraft:melon_slice"  />                | 25 Seconds  | <McItem slug="minecraft:glistering_melon_slice"  />      |
 | <McItem slug="techreborn:nitro_carbon_cell"  /> + <McItem slug="techreborn:water_cell"  />            | 30 Seconds  | 2x <McItem slug="techreborn:glyceryl_cell"  />           |
 | 6x <McItem slug="minecraft:gold_ingot"  /> + <McItem slug="minecraft:apple"  />                       | 20 Seconds  | <McItem slug="minecraft:golden_apple"  />                |
