--- a/docs/blocks/machines/grinder.mdx
+++ b/docs/blocks/machines/grinder.mdx
@@ -50,13 +50,13 @@ Main usage of **Grinder** is to grind materials.
 | 1x <McItem slug="minecraft:andesite"/> | 2x <McItem slug="techreborn:andesite_dust"/> |
 | 1x <McItem slug="minecraft:blaze_rod"/> | 4x <McItem slug="minecraft:blaze_powder"/> |
 | 1x <McItem slug="minecraft:diorite"/> | 1x <McItem slug="techreborn:diorite_dust"/> |
-| 1x <McItem slug="minecraft:ender_eye"/> | 2x <McItem slug="techreborn:ender_eye_dust"/> |
+| 1x <McItem slug="minecraft:eye_of_ender"/> | 2x <McItem slug="techreborn:ender_eye_dust"/> |
 | 1x <McItem slug="minecraft:ender_pearl"/> | 2x <McItem slug="techreborn:ender_pearl_dust"/> |
 | 1x <McItem slug="minecraft:flint"/> | 1x <McItem slug="techreborn:flint_dust"/> |
 | 1x <McItem slug="minecraft:granite"/> | 2x <McItem slug="techreborn:granite_dust"/> |
-| 1x <McItem slug="minecraft:nether_quartz_ore"/> | 2x <McItem slug="minecraft:quartz"/> |
-| 1x <McItem slug="minecraft:quartz"/> | 1x <McItem slug="techreborn:quartz_dust"/> |
-| 1x <McItem slug="minecraft:quartz_block"/> | 4x <McItem slug="techreborn:quartz_dust"/> |
+| 1x <McItem slug="minecraft:nether_quartz_ore"/> | 2x <McItem slug="minecraft:nether_quartz"/> |
+| 1x <McItem slug="minecraft:nether_quartz"/> | 1x <McItem slug="techreborn:quartz_dust"/> |
+| 1x <McItem slug="minecraft:block_of_quartz"/> | 4x <McItem slug="techreborn:quartz_dust"/> |
 | 1x <McItem slug="minecraft:white_wool"/> | 4x <McItem slug="minecraft:string"/> |
 
 
