--- a/docs/blocks/machines/implosion_compressor.mdx
+++ b/docs/blocks/machines/implosion_compressor.mdx
@@ -33,8 +33,8 @@ Put the **Implosion Compressor** on the top and provide some energy to it. <img 
 | 1x <McItem slug="techreborn:iridium_alloy_ingot" inline={true}/> | 2x <McItem slug="minecraft:end_crystal" inline={true}/> | 1x <McItem slug="techreborn:iridium_alloy_plate" inline={true}/> | 2x <McItem slug="techreborn:ender_eye_small_dust" inline={true}/> |
 | 4x <McItem slug="techreborn:peridot_dust" inline={true}/> | 16x <McItem slug="minecraft:tnt" inline={true}/> | 3x <McItem slug="techreborn:peridot_gem" inline={true}/> | 12x <McItem slug="techreborn:dark_ashes_dust" inline={true}/> |
 | 4x <McItem slug="techreborn:peridot_dust" inline={true}/> | 4x <McItem slug="minecraft:end_crystal" inline={true}/> | 3x <McItem slug="techreborn:peridot_gem" inline={true}/> | 4x <McItem slug="techreborn:ender_eye_small_dust" inline={true}/> |
-| 9x <McItem slug="minecraft:redstone_block" inline={true}/> | 16x <McItem slug="minecraft:tnt" inline={true}/> | 4x <McItem slug="techreborn:red_garnet_dust" inline={true}/> | 4x <McItem slug="techreborn:dark_ashes_dust" inline={true}/> |
-| 9x <McItem slug="minecraft:redstone_block" inline={true}/> | 4x <McItem slug="minecraft:end_crystal" inline={true}/> | 4x <McItem slug="techreborn:red_garnet_dust" inline={true}/> | 4x <McItem slug="techreborn:ender_eye_small_dust" inline={true}/> |
+| 9x <McItem slug="minecraft:block_of_redstone" inline={true}/> | 16x <McItem slug="minecraft:tnt" inline={true}/> | 4x <McItem slug="techreborn:red_garnet_dust" inline={true}/> | 4x <McItem slug="techreborn:dark_ashes_dust" inline={true}/> |
+| 9x <McItem slug="minecraft:block_of_redstone" inline={true}/> | 4x <McItem slug="minecraft:end_crystal" inline={true}/> | 4x <McItem slug="techreborn:red_garnet_dust" inline={true}/> | 4x <McItem slug="techreborn:ender_eye_small_dust" inline={true}/> |
 | 4x <McItem slug="techreborn:red_garnet_dust" inline={true}/> | 16x <McItem slug="minecraft:tnt" inline={true}/> | 3x <McItem slug="techreborn:red_garnet_gem" inline={true}/> | 8x <McItem slug="techreborn:dark_ashes_dust" inline={true}/> |
 | 4x <McItem slug="techreborn:red_garnet_dust" inline={true}/> | 4x <McItem slug="minecraft:end_crystal" inline={true}/> | 3x <McItem slug="techreborn:red_garnet_gem" inline={true}/> | 4x <McItem slug="techreborn:ender_eye_small_dust" inline={true}/> |
 | 4x <McItem slug="techreborn:ruby_dust" inline={true}/> | 16x <McItem slug="minecraft:tnt" inline={true}/> | 3x <McItem slug="techreborn:ruby_gem" inline={true}/> | 12x <McItem slug="techreborn:dark_ashes_dust" inline={true}/> |
