--- a/docs/blocks/machines/rolling_machine.mdx
+++ b/docs/blocks/machines/rolling_machine.mdx
@@ -31,7 +31,7 @@ The **Rolling Machine** is used to produce various coils, and vanilla items such
 <CraftingTable recipe="input minecraft:iron_ingot minecraft:iron_ingot air input minecraft:iron_ingot minecraft:iron_ingot air input minecraft:iron_ingot minecraft:iron_ingot air output minecraft:iron_door,4 tool techreborn:rolling_machine" />
 <CraftingTable recipe="input minecraft:iron_ingot air minecraft:iron_ingot input minecraft:iron_ingot minecraft:iron_ingot minecraft:iron_ingot input air air air output minecraft:minecart,2 tool techreborn:rolling_machine" />
 <CraftingTable recipe="input minecraft:iron_ingot air minecraft:iron_ingot input minecraft:iron_ingot air minecraft:iron_ingot input air minecraft:iron_ingot air output minecraft:bucket,2 tool techreborn:rolling_machine" />
-<CraftingTable recipe="input air minecraft:iron_ingot air input air minecraft:stick air input air minecraft:wood_planks air output minecraft:tripwire_hook,4 tool techreborn:rolling_machine" />
+<CraftingTable recipe="input air minecraft:iron_ingot air input air minecraft:stick air input air minecraft:oak_planks air output minecraft:tripwire_hook,4 tool techreborn:rolling_machine" />
 <CraftingTable recipe="input air air air input minecraft:iron_ingot minecraft:iron_ingot air input air air air output minecraft:heavy_pressure_plate,2 tool techreborn:rolling_machine" />
 <CraftingTable recipe="input air air air input minecraft:gold_ingot minecraft:gold_ingot air input air air air output minecraft:light_pressure_plate,2 tool techreborn:rolling_machine" />
 
