--- a/docs/blocks/machines/upgrades/energy_storage_upgrade.mdx
+++ b/docs/blocks/machines/upgrades/energy_storage_upgrade.mdx
@@ -12,4 +12,4 @@ It adds 40kE to the storage of the machine, and does stack with other upgrades o
 
 ## Recipe
 
-<CraftingTable recipe="input minecraft:wood_planks minecraft:wood_planks minecraft:wood_planks input techreborn:insulated_copper_cable techreborn:red_cell_battery techreborn:insulated_copper_cable input minecraft:wood_planks techreborn:electronic_circuit minecraft:wood_planks output techreborn:energy_storage_upgrade"/>
+<CraftingTable recipe="input minecraft:oak_planks minecraft:oak_planks minecraft:oak_planks input techreborn:insulated_copper_cable techreborn:red_cell_battery techreborn:insulated_copper_cable input minecraft:oak_planks techreborn:electronic_circuit minecraft:oak_planks output techreborn:energy_storage_upgrade"/>
