--- a/docs/items/dusts/clay_dust.mdx
+++ b/docs/items/dusts/clay_dust.mdx
@@ -12,7 +12,7 @@ title: Clay Dust
 
 <CraftingTable recipe="input techreborn:small_pile_of_clay_dust techreborn:small_pile_of_clay_dust air input techreborn:small_pile_of_clay_dust techreborn:small_pile_of_clay_dust air input air air air output techreborn:clay_dust"/>
 
-<Machine config={{input: [{id: "minecraft:clay_item"}], output: [{id: "techreborn:clay_dust"}], tool: "techreborn:grinder"}} />
+<Machine config={{input: [{id: "minecraft:clay"}], output: [{id: "techreborn:clay_dust"}], tool: "techreborn:grinder"}} />
 
 ## Usage
 
