--- a/docs/items/dusts/ender_eye_dust.mdx
+++ b/docs/items/dusts/ender_eye_dust.mdx
@@ -12,7 +12,7 @@ title: Ender Eye Dust
 
 <CraftingTable recipe="input techreborn:small_pile_of_ender_eye_dust techreborn:small_pile_of_ender_eye_dust air input techreborn:small_pile_of_ender_eye_dust techreborn:small_pile_of_ender_eye_dust air input air air air output techreborn:ender_eye_dust"/>
 
-<Machine config={{input: [{id: "minecraft:ender_eye"}], output: [{id: "techreborn:ender_eye_dust", qty: 2}], tool: "techreborn:grinder"}} />
+<Machine config={{input: [{id: "minecraft:eye_of_ender"}], output: [{id: "techreborn:ender_eye_dust", qty: 2}], tool: "techreborn:grinder"}} />
 
 ## Usage
 
