--- a/docs/items/plates/coal_plate.mdx
+++ b/docs/items/plates/coal_plate.mdx
@@ -17,7 +17,7 @@ title: Coal Plate
 ], tool: "techreborn:compressor"}} />
 
 <Machine config={{input: [
-	{id: "minecraft:coal_block"}
+	{id: "minecraft:block_of_coal"}
 ], output: [
 	{id: "techreborn:coal_plate", qty: 9}
 ], tool: "techreborn:compressor"}} />
