--- a/docs/items/tools/treetap.mdx
+++ b/docs/items/tools/treetap.mdx
@@ -12,7 +12,7 @@ It's durability lasts 20 uses before it is destroyed.
 
 ## Recipes
 
-<CraftingTable recipe="input air minecraft:stick air input minecraft:wood_planks minecraft:wood_planks minecraft:wood_planks input minecraft:wood_planks air air output techreborn:treetap" />
+<CraftingTable recipe="input air minecraft:stick air input minecraft:oak_planks minecraft:oak_planks minecraft:oak_planks input minecraft:oak_planks air air output techreborn:treetap" />
 
 
 ## Usage
