--- a/docs/blocks/batteries/lesu_storage.mdx
+++ b/docs/blocks/batteries/lesu_storage.mdx
@@ -10,7 +10,7 @@ The **LESU Storage** is a multi-block expansion for the <McItem slug="techreborn
 
 ## Recipe
 
-<CraftingTable recipe="input minecraft:lapis_block minecraft:lapis_block minecraft:lapis_block input minecraft:lapis_block techreborn:electronic_circuit minecraft:lapis_block input minecraft:lapis_block minecraft:lapis_block minecraft:lapis_block output techreborn:lsu_storage"/>
+<CraftingTable recipe="input minecraft:block_of_lapis_lazuli minecraft:block_of_lapis_lazuli minecraft:block_of_lapis_lazuli input minecraft:block_of_lapis_lazuli techreborn:electronic_circuit minecraft:block_of_lapis_lazuli input minecraft:block_of_lapis_lazuli minecraft:block_of_lapis_lazuli minecraft:block_of_lapis_lazuli output techreborn:lsu_storage"/>
 
 ## Usage
 
