--- a/docs/items/dusts/amethyst_dust.mdx
+++ b/docs/items/dusts/amethyst_dust.mdx
@@ -10,7 +10,7 @@ title: Amethyst Dust
 
 ## Recipes
 
-<Machine config={{input: [{id: "minecraft:amethyst_block"}], output: [{id: "techreborn:amethyst_dust", qty: 2}], tool: "techreborn:grinder"}} />
+<Machine config={{input: [{id: "minecraft:block_of_amethyst"}], output: [{id: "techreborn:amethyst_dust", qty: 2}], tool: "techreborn:grinder"}} />
 
 <Machine config={{input: [
   {id: "techreborn:amethyst_dust", qty: 8},
