fixing energy_crystal recipe

--- a/docs/items/batteries/energy_crystal.mdx
+++ b/docs/items/batteries/energy_crystal.mdx
@@ -17,6 +17,8 @@ Made in Assembling Machine.
 
 \<recipe\> size 1x2 input techreborn:silicon_plate input techreborn:synthetic_redstone_crystal,2 output techreborn:energy_crystal tool techreborn:assembling_machine \</recipe\>
 
+<Machine recipe="input techreborn:silicon_plate input techreborn:synthetic_redstone_crystal,2 output techreborn:energy_crystal tool techreborn:assembling_machine" />
+
 ## Usage
 
 **Energy Crystals** are used as crafting ingredient in the following crafting recipes:
