another broken recipe

--- a/docs/items/dusts/saw_dust.mdx
+++ b/docs/items/dusts/saw_dust.mdx
@@ -13,10 +13,10 @@ title: Saw Dust
 <CraftingTable recipe="input techreborn:small_pile_of_saw_dust techreborn:small_pile_of_saw_dust air input techreborn:small_pile_of_saw_dust techreborn:small_pile_of_saw_dust air input air air air output techreborn:saw_dust"/>
 
 <Machine config={{input: [
-  {id: "minecraft:wood"},
+  {id: "minecraft:oak_log"},
   {id: "techreborn:water_cell"}
 ], output: [
-  {id: "minecraft:wood", qty: 4},
+  {id: "minecraft:oak_planks", qty: 4},
   {id: "techreborn:saw_dust", qty: 3},
   {id: "minecraft:paper"}
 ], tool: "techreborn:saw_mill"}} />
