--- a/docs/items/fluids/helium_cell.mdx
+++ b/docs/items/fluids/helium_cell.mdx
@@ -10,7 +10,7 @@ title: Helium Cell
 
 <Machine config={{
   input: [
-    {id: "minecraft:endstone", qty: 16},
+    {id: "techreborn:endstone_dust", qty: 16},
     {id: "techreborn:empty_cell", qty: 2}
   ],
   output: [
