renamed all blast_furnace to industrial_blast_furnace
this was breaking deep linking and industrial blast furnace is the correct name per the source.

--- a/docs/items/dusts/aluminum_dust.mdx
+++ b/docs/items/dusts/aluminum_dust.mdx
@@ -29,5 +29,5 @@ title: Aluminum Dust
 
 ## Usage
 
-<Machine config={{input: [{id: "techreborn:aluminum_dust"}], output: [{id: "techreborn:aluminum_ingot"}], tool: "techreborn:blast_furnace"}} />
+<Machine config={{input: [{id: "techreborn:aluminum_dust"}], output: [{id: "techreborn:aluminum_ingot"}], tool: "techreborn:industrial_blast_furnace"}} />
 _Requires Industrial Blast Furnace with 1700 heat._
