--- a/docs/items/dusts/calcite_dust.mdx
+++ b/docs/items/dusts/calcite_dust.mdx
@@ -39,7 +39,7 @@ title: Calcite Dust
 ], output: [
   {id: "minecraft:iron_ingot", qty: 3},
   {id: "techreborn:dark_ashes"}
-], tool: "techreborn:blast_furnace"}} />
+], tool: "techreborn:industrial_blast_furnace"}} />
 
 <Machine config={{input: [
   {id: "techreborn:pyrite_ore"},
@@ -47,4 +47,4 @@ title: Calcite Dust
 ], output: [
   {id: "minecraft:iron_ingot", qty: 2},
   {id: "techreborn:dark_ashes"}
-], tool: "techreborn:blast_furnace"}} />
+], tool: "techreborn:industrial_blast_furnace"}} />
