--- a/docs/items/dusts/chrome_dust.mdx
+++ b/docs/items/dusts/chrome_dust.mdx
@@ -37,5 +37,5 @@ title: Chrome Dust
 
 <CraftingTable recipe="input air air air input air techreborn:chrome_dust air input air air air output techreborn:small_pile_of_chrome_dust,4"/>
 
-<Machine config={{input: [{id: "techreborn:chrome_dust"}], output: [{id: "techreborn:chrome_ingot"}], tool: "techreborn:blast_furnace"}} />
+<Machine config={{input: [{id: "techreborn:chrome_dust"}], output: [{id: "techreborn:chrome_ingot"}], tool: "techreborn:industrial_blast_furnace"}} />
 _This operation requires 1700 heat._
