--- a/docs/items/dusts/coal_dust.mdx
+++ b/docs/items/dusts/coal_dust.mdx
@@ -56,7 +56,7 @@ title: Coal Dust
 ], output: [
   {id: "techreborn:steel_ingot"},
   {id: "techreborn:dark_ashes", qty: 2}
-], tool: "techreborn:blast_furnace"}} />
+], tool: "techreborn:industrial_blast_furnace"}} />
 _This requires 1000 heat._
 
 <Machine config={{input: [
