--- a/docs/items/dusts/dark_ashes.mdx
+++ b/docs/items/dusts/dark_ashes.mdx
@@ -18,7 +18,7 @@ title: Dark Ashes
 ], output: [
   {id: "techreborn:steel_ingot"},
   {id: "techreborn:dark_ashes", qty: 2}
-], tool: "techreborn:blast_furnace"}} />
+], tool: "techreborn:industrial_blast_furnace"}} />
 
 <Machine config={{input: [
   {id: "techreborn:steel_ingot"},
@@ -26,7 +26,7 @@ title: Dark Ashes
 ], output: [
   {id: "techreborn:hot_tungstensteel_ingot"},
   {id: "techreborn:dark_ashes", qty: 4}
-], tool: "techreborn:blast_furnace"}} />
+], tool: "techreborn:industrial_blast_furnace"}} />
 
 <Machine config={{input: [{id: "techreborn:basalt_dust", qty: 16}], output: [
   {id: "techreborn:peridot_dust"},
