--- a/docs/items/dusts/galena_dust.mdx
+++ b/docs/items/dusts/galena_dust.mdx
@@ -38,7 +38,7 @@ title: Galena Dust
 <Machine config={{input: [{id: "techreborn:galena_dust", qty: 2}], output: [
   {id: "techreborn:silver_ingot"},
   {id: "techreborn:lead_ingot"}
-], tool: "techreborn:blast_furnace"}} />
+], tool: "techreborn:industrial_blast_furnace"}} />
 _Requires 1500 heat_
 
 <Machine config={{input: [{id: "techreborn:galena_dust", qty: 2}], output: [
