--- a/docs/items/dusts/steel_dust.mdx
+++ b/docs/items/dusts/steel_dust.mdx
@@ -6,7 +6,7 @@ title: Steel Dust
 
 # Steel Dust
 
-**Steel Dust** is a greatest dust ever. You can keep your <McItem slug="techreborn:grinder" /> and <McItem slug="techreborn:blast_furnace" /> busy by grinding ingot to dust and then back smelting dust to ingot!
+**Steel Dust** is a greatest dust ever. You can keep your <McItem slug="techreborn:grinder" /> and <McItem slug="techreborn:industrial_blast_furnace" /> busy by grinding ingot to dust and then back smelting dust to ingot!
 
 ## Recipe
 
@@ -18,4 +18,4 @@ title: Steel Dust
 
 <CraftingTable recipe="input air air air input air techreborn:steel_dust air input air air air output techreborn:small_pile_of_steel_dust,4"/>
 
-<Machine config={{input: [{id: "techreborn:steel_dust"}], output: [{id: "techreborn:steel_ingot"}], tool: "techreborn:blast_furnace"}} />
+<Machine config={{input: [{id: "techreborn:steel_dust"}], output: [{id: "techreborn:steel_ingot"}], tool: "techreborn:industrial_blast_furnace"}} />
