--- a/docs/items/dusts/tungsten_dust.mdx
+++ b/docs/items/dusts/tungsten_dust.mdx
@@ -20,6 +20,6 @@ title: Tungsten Dust
 
 <CraftingTable recipe="input air air air input air techreborn:tungsten_dust air input air air air output techreborn:small_pile_of_tungsten_dust,4"/>
 
-<Machine config={{input: [{id: "techreborn:tungsten_dust"}], output: [{id: "techreborn:tungsten_ingot"}], tool: "techreborn:blast_furnace"}} />
+<Machine config={{input: [{id: "techreborn:tungsten_dust"}], output: [{id: "techreborn:tungsten_ingot"}], tool: "techreborn:industrial_blast_furnace"}} />
 
 <Machine config={{input: [{id: "techreborn:tungsten_dust"}, {id: "techreborn:empty_cell"}], output: [{id: "techreborn:wolframium_cell"}], tool: "techreborn:industrial_electrolyzer"}} />
