--- a/docs/items/ingots/aluminum_ingot.mdx
+++ b/docs/items/ingots/aluminum_ingot.mdx
@@ -14,7 +14,7 @@ title: Aluminum Ingot
 <CraftingTable recipe="input air air air input air techreborn:aluminum_storage_block air input air air air output techreborn:aluminum_ingot,9"/>
 
 
-<Machine config={{input: [{id: "techreborn:aluminum_dust"}], output: [{id: "techreborn:aluminum_ingot"}], tool: "techreborn:blast_furnace"}} />
+<Machine config={{input: [{id: "techreborn:aluminum_dust"}], output: [{id: "techreborn:aluminum_ingot"}], tool: "techreborn:industrial_blast_furnace"}} />
 This recipe requires 1700 heat.
 
 ## Usage
