--- a/docs/items/ingots/bronze_ingot.mdx
+++ b/docs/items/ingots/bronze_ingot.mdx
@@ -17,7 +17,7 @@ title: Bronze Ingot
 
 <Machine recipe="input techreborn:bronze_dust output techreborn:bronze_ingot tool techreborn:iron_furnace" />
 
-<McItem slug="techreborn:blast_furnace"/> recipes:  
+<McItem slug="techreborn:industrial_blast_furnace"/> recipes:  
 Recycling of <McItem slug="techreborn:bronze_pickaxe"/>, <McItem slug="techreborn:bronze_axe"/> and <McItem slug="techreborn:bronze_chestplate"/> <McItem slug="techreborn:bronze_armor"/>
 
 ## Usage
