--- a/docs/items/ingots/chrome_ingot.mdx
+++ b/docs/items/ingots/chrome_ingot.mdx
@@ -15,10 +15,10 @@ title: Chrome Ingot
 <CraftingTable recipe="input air air air input air techreborn:chrome_storage_block air input air air air output techreborn:chrome_ingot,9"/>
 
 
-<Machine recipe="input techreborn:chrome_dust air output techreborn:chrome_ingot tool techreborn:blast_furnace" />
+<Machine recipe="input techreborn:chrome_dust air output techreborn:chrome_ingot tool techreborn:industrial_blast_furnace" />
 This recipe require 1700 heat.
 
-<Machine recipe="input techreborn:small_pile_of_chrome_dust,4 air output techreborn:chrome_ingot tool techreborn:blast_furnace" />
+<Machine recipe="input techreborn:small_pile_of_chrome_dust,4 air output techreborn:chrome_ingot tool techreborn:industrial_blast_furnace" />
 This recipe require 1700 heat.
 
 ## Usage
