--- a/docs/items/ingots/iridium_ingot.mdx
+++ b/docs/items/ingots/iridium_ingot.mdx
@@ -13,7 +13,7 @@ title: Iridium Ingot
 <CraftingTable recipe="input techreborn:iridium_nugget techreborn:iridium_nugget techreborn:iridium_nugget input techreborn:iridium_nugget techreborn:iridium_nugget techreborn:iridium_nugget input techreborn:iridium_nugget techreborn:iridium_nugget techreborn:iridium_nugget output techreborn:iridium_ingot"/>
 <CraftingTable recipe="input air air air input air techreborn:iridium_storage_block air input air air air output techreborn:iridium_ingot,9"/>
 
-<Machine recipe="input techreborn:raw_iridium air output techreborn:iridium_ingot tool techreborn:blast_furnace" />
+<Machine recipe="input techreborn:raw_iridium air output techreborn:iridium_ingot tool techreborn:industrial_blast_furnace" />
 
 ## Usage
 
