--- a/docs/items/ingots/lead_ingot.mdx
+++ b/docs/items/ingots/lead_ingot.mdx
@@ -17,8 +17,8 @@ title: Lead Ingot
 <Machine recipe="input techreborn:lead_ore output techreborn:lead_ingot tool techreborn:iron_furnace" />
 <Machine recipe="input techreborn:deepslate_lead_ore output techreborn:lead_ingot tool techreborn:iron_furnace" />
 
-<Machine config={{input: [{id: "techreborn:galena_small_dust", qty: 8}], output: [{id: "techreborn:lead_ingot"}, {id: "techreborn:silver_ingot"}], tool: "techreborn:blast_furnace"}} />
-<Machine config={{input: [{id: "techreborn:galena_dust", qty: 2}], output: [{id: "techreborn:lead_ingot"}, {id: "techreborn:silver_ingot"}], tool: "techreborn:blast_furnace"}} />
+<Machine config={{input: [{id: "techreborn:galena_small_dust", qty: 8}], output: [{id: "techreborn:lead_ingot"}, {id: "techreborn:silver_ingot"}], tool: "techreborn:industrial_blast_furnace"}} />
+<Machine config={{input: [{id: "techreborn:galena_dust", qty: 2}], output: [{id: "techreborn:lead_ingot"}, {id: "techreborn:silver_ingot"}], tool: "techreborn:industrial_blast_furnace"}} />
 
 ## Usage
 
