--- a/docs/items/ingots/refined_iron_ingot.mdx
+++ b/docs/items/ingots/refined_iron_ingot.mdx
@@ -21,11 +21,11 @@ A **Refined Iron Ingot** is used in many Tech Reborn recipes. It is typically ac
 
 #### Blast Furnace Recipes
 
-<Machine config={{input: [{id: "techreborn:pyrite_ore"}, {id: "techreborn:calcium_carbonate_cell"}], output: [{id: "techreborn:refined_iron_ingot", qty: 2}, {id: "techreborn:empty_cell"}], tool: "techreborn:blast_furnace"}} />
+<Machine config={{input: [{id: "techreborn:pyrite_ore"}, {id: "techreborn:calcium_carbonate_cell"}], output: [{id: "techreborn:refined_iron_ingot", qty: 2}, {id: "techreborn:empty_cell"}], tool: "techreborn:industrial_blast_furnace"}} />
 
-<Machine config={{input: [{id: "minecraft:iron_ore"}, {id: "techreborn:calcium_carbonate_cell"}], output: [{id: "techreborn:refined_iron_ingot", qty: 3}, {id: "techreborn:empty_cell"}], tool: "techreborn:blast_furnace"}} />
+<Machine config={{input: [{id: "minecraft:iron_ore"}, {id: "techreborn:calcium_carbonate_cell"}], output: [{id: "techreborn:refined_iron_ingot", qty: 3}, {id: "techreborn:empty_cell"}], tool: "techreborn:industrial_blast_furnace"}} />
 
-<Machine config={{input: [{id: "minecraft:deepslate_iron_ore"}, {id: "techreborn:calcium_carbonate_cell"}], output: [{id: "techreborn:refined_iron_ingot", qty: 3}, {id: "techreborn:empty_cell"}], tool: "techreborn:blast_furnace"}} />
+<Machine config={{input: [{id: "minecraft:deepslate_iron_ore"}, {id: "techreborn:calcium_carbonate_cell"}], output: [{id: "techreborn:refined_iron_ingot", qty: 3}, {id: "techreborn:empty_cell"}], tool: "techreborn:industrial_blast_furnace"}} />
 
 ## Usage
 
@@ -55,9 +55,9 @@ A **Refined Iron Ingot** is used in many Tech Reborn recipes. It is typically ac
 
 #### Blast Furnace Recipes
 
-<Machine config={{input: [{id: "techreborn:refined_iron_ingot"}, {id: "techreborn:coal_dust", qty: 4}], output: [{id: "techreborn:steel_ingot"}, {id: "techreborn:dark_ashes_dust", qty: 2}], tool: "techreborn:blast_furnace"}} />
+<Machine config={{input: [{id: "techreborn:refined_iron_ingot"}, {id: "techreborn:coal_dust", qty: 4}], output: [{id: "techreborn:steel_ingot"}, {id: "techreborn:dark_ashes_dust", qty: 2}], tool: "techreborn:industrial_blast_furnace"}} />
 
-<Machine config={{input: [{id: "techreborn:refined_iron_ingot"}, {id: "techreborn:carbon_cell", qty: 2}], output: [{id: "techreborn:steel_ingot"}, {id: "techreborn:empty_cell", qty: 2}], tool: "techreborn:blast_furnace"}} />
+<Machine config={{input: [{id: "techreborn:refined_iron_ingot"}, {id: "techreborn:carbon_cell", qty: 2}], output: [{id: "techreborn:steel_ingot"}, {id: "techreborn:empty_cell", qty: 2}], tool: "techreborn:industrial_blast_furnace"}} />
 
 #### Compressor Recipe
 
