--- a/docs/items/plates/silicon_plate.mdx
+++ b/docs/items/plates/silicon_plate.mdx
@@ -15,7 +15,7 @@ title: Silicon Plate
 ], output: [
 	{id: "techreborn:silicon_plate"},
 	{id: "techreborn:empty_cell", qty: 2}
-], tool: "techreborn:blast_furnace", heat: 1500}} />
+], tool: "techreborn:industrial_blast_furnace", heat: 1500}} />
 
 ## Usage
 
