--- a/docs/items/dusts/titanium_dust.mdx
+++ b/docs/items/dusts/titanium_dust.mdx
@@ -22,4 +22,4 @@ Later, <McItem slug="techreborn:titanium_dust" /> is best acquired by crafting f
 
 <CraftingTable recipe="input air air air input air techreborn:titanium_dust air input air air air output techreborn:small_pile_of_titanium_dust,4"/>
 
-<Machine config={{input: [{id: "techreborn:titanium_dust"}], output: [{id: "techreborn:titanium_ingot"}], tool: "techreborn:blast_furnace"}} />
+<Machine config={{input: [{id: "techreborn:titanium_dust"}], output: [{id: "techreborn:titanium_ingot"}], tool: "techreborn:industrial_blast_furnace"}} />
