--- a/docs/items/ingots/hot_tungstensteel_ingot.mdx
+++ b/docs/items/ingots/hot_tungstensteel_ingot.mdx
@@ -14,7 +14,7 @@ title: Hot Tungstensteel Ingot
 
 <CraftingTable recipe="input air air air input air techreborn:hot_tungstensteel_storage_block air input air air air output techreborn:hot_tungstensteel_ingot,9"/>
 
-<Machine config={{input: [{id: "techreborn:steel_ingot"}, {id: "techreborn:tungsten_ingot"}], output: [{id: "techreborn:hot_tungstensteel_ingot"}, {id: "techreborn:dark_ashes_dust"}], tool: "techreborn:blast_furnace"}} />
+<Machine config={{input: [{id: "techreborn:steel_ingot"}, {id: "techreborn:tungsten_ingot"}], output: [{id: "techreborn:hot_tungstensteel_ingot"}, {id: "techreborn:dark_ashes_dust"}], tool: "techreborn:industrial_blast_furnace"}} />
 
 ## Usage
 
