--- a/docs/items/ingots/silver_ingot.mdx
+++ b/docs/items/ingots/silver_ingot.mdx
@@ -17,8 +17,8 @@ title: Silver Ingot
 <Machine recipe="input techreborn:silver_ore output techreborn:silver_ingot tool techreborn:iron_furnace" />
 <Machine recipe="input techreborn:deepslate_silver_ore output techreborn:silver_ingot tool techreborn:iron_furnace" />
 
-<Machine config={{input: [{id: "techreborn:galena_small_dust", qty: 8}], output: [{id: "techreborn:silver_ingot"}, {id: "techreborn:lead_ingot"}], tool: "techreborn:blast_furnace"}} />
-<Machine config={{input: [{id: "techreborn:galena_dust", qty: 2}], output: [{id: "techreborn:silver_ingot"}, {id: "techreborn:lead_ingot"}], tool: "techreborn:blast_furnace"}} />
+<Machine config={{input: [{id: "techreborn:galena_small_dust", qty: 8}], output: [{id: "techreborn:silver_ingot"}, {id: "techreborn:lead_ingot"}], tool: "techreborn:industrial_blast_furnace"}} />
+<Machine config={{input: [{id: "techreborn:galena_dust", qty: 2}], output: [{id: "techreborn:silver_ingot"}, {id: "techreborn:lead_ingot"}], tool: "techreborn:industrial_blast_furnace"}} />
 
 <img src="/img/mods/techreborn/silver_chestplate.png" width="24" alt="Silver Armor"/> <strong><a href="/items/armor/silver_armor">Silver Armor</a></strong> recycling
 
