--- a/docs/items/ingots/titanium_ingot.mdx
+++ b/docs/items/ingots/titanium_ingot.mdx
@@ -13,8 +13,8 @@ title: Titanium Ingot
 <CraftingTable recipe="input techreborn:titanium_nugget techreborn:titanium_nugget techreborn:titanium_nugget input techreborn:titanium_nugget techreborn:titanium_nugget techreborn:titanium_nugget input techreborn:titanium_nugget techreborn:titanium_nugget techreborn:titanium_nugget output techreborn:titanium_ingot"/>
 <CraftingTable recipe="input air air air input air techreborn:titanium_storage_block air input air air air output techreborn:titanium_ingot,9"/>
 
-<Machine recipe="input techreborn:titanium_small_dust,4 air output techreborn:titanium_ingot tool techreborn:blast_furnace" />
-<Machine recipe="input techreborn:titanium_dust air output techreborn:titanium_ingot tool techreborn:blast_furnace" />
+<Machine recipe="input techreborn:titanium_small_dust,4 air output techreborn:titanium_ingot tool techreborn:industrial_blast_furnace" />
+<Machine recipe="input techreborn:titanium_dust air output techreborn:titanium_ingot tool techreborn:industrial_blast_furnace" />
 
 ## Usage
 
