--- a/docs/items/ingots/tungsten_ingot.mdx
+++ b/docs/items/ingots/tungsten_ingot.mdx
@@ -13,8 +13,8 @@ title: Tungsten Ingot
 <CraftingTable recipe="input techreborn:tungsten_nugget techreborn:tungsten_nugget techreborn:tungsten_nugget input techreborn:tungsten_nugget techreborn:tungsten_nugget techreborn:tungsten_nugget input techreborn:tungsten_nugget techreborn:tungsten_nugget techreborn:tungsten_nugget output techreborn:tungsten_ingot"/>
 <CraftingTable recipe="input air air air input air techreborn:tungsten_storage_block air input air air air output techreborn:tungsten_ingot,9"/>
 
-<Machine recipe="input techreborn:raw_tungsten air output techreborn:tungsten_ingot tool techreborn:blast_furnace" />
-<Machine recipe="input techreborn:tungsten_small_dust,4 air output techreborn:tungsten_ingot tool techreborn:blast_furnace" />
+<Machine recipe="input techreborn:raw_tungsten air output techreborn:tungsten_ingot tool techreborn:industrial_blast_furnace" />
+<Machine recipe="input techreborn:tungsten_small_dust,4 air output techreborn:tungsten_ingot tool techreborn:industrial_blast_furnace" />
 
 ## Usage
 
@@ -29,6 +29,6 @@ title: Tungsten Ingot
 - <McItem slug="techreborn:energy_flow_chip"/>
 - <McItem slug="techreborn:mixed_metal_ingot"/>
 
-<Machine config={{input: [{id: "techreborn:steel_ingot"}, {id: "techreborn:tungsten_ingot"}], output: [{id: "techreborn:hot_tungstensteel_ingot"}, {id: "techreborn:dark_ashes_dust"}], tool: "techreborn:blast_furnace"}} />
+<Machine config={{input: [{id: "techreborn:steel_ingot"}, {id: "techreborn:tungsten_ingot"}], output: [{id: "techreborn:hot_tungstensteel_ingot"}, {id: "techreborn:dark_ashes_dust"}], tool: "techreborn:industrial_blast_furnace"}} />
 
 <Machine recipe="input techreborn:tungsten_ingot output techreborn:tungsten_plate tool techreborn:compressor" />
